# glass

./: CMakeLists.txt  README  README.md
source/: CMakeLists.txt  config.cpp  config.hpp  main.cpp
source/glass/: CMakeLists.txt
source/glass/core/: CMakeLists.txt  Color.hpp  DisplayServer.cpp  DisplayServer.hpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  Input.hpp  InputListener.cpp  InputListener.hpp  Log.hpp  Shape.hpp  Vector.hpp  Window.cpp  Window.hpp  WindowDecorator.cpp  WindowDecorator.hpp  WindowLayout.cpp  WindowLayout.hpp  WindowManager.cpp  WindowManager.hpp
source/glass/displayserver/: CMakeLists.txt  X11XCB_DisplayServer.cpp  X11XCB_DisplayServer.hpp
source/glass/displayserver/x11xcb_displayserver/: Atoms.cpp  Atoms.hpp  CMakeLists.txt  EventHandler.cpp  EventHandler.hpp  GeometryChange.hpp  Implementation.cpp  Implementation.hpp  InputTranslator.cpp  InputTranslator.hpp  WindowData.cpp  WindowData.hpp
source/glass/inputlistener/: CMakeLists.txt  X11XCB_InputListener.cpp  X11XCB_InputListener.hpp
source/glass/window/: CMakeLists.txt  Default_FrameWindow.cpp  Default_FrameWindow.hpp  Frame_AuxiliaryWindow.cpp  Frame_AuxiliaryWindow.hpp
source/glass/windowdecorator/: CMakeLists.txt  Default_WindowDecorator.cpp  Default_WindowDecorator.hpp
source/glass/windowlayout/: BSP_WindowLayout.cpp  BSP_WindowLayout.hpp  CMakeLists.txt  Dummy_WindowLayout.cpp  Dummy_WindowLayout.hpp
source/glass/windowlayout/bsp_windowlayout/: CMakeLists.txt  Implementation.hpp  Node.cpp  Node.hpp
source/glass/windowmanager/: CMakeLists.txt  Dynamic_WindowManager.cpp  Dynamic_WindowManager.hpp
source/glass/windowmanager/dynamic_windowmanager/: CMakeLists.txt  ClientData.cpp  ClientData.hpp  EventHandler.cpp  EventHandler.hpp  Implementation.cpp  Implementation.hpp  Rule.cpp  Rule.hpp  TagManager.cpp  TagManager.hpp
source/util/: CMakeLists.txt  creator.hpp  interruptible.hpp  locked_accessor.hpp  scoped_free.hpp
